@@ -1,0 +1,7 @@
+<?php /*
+
+[oracle]
+ColumnTypeTranslation[ezgmaplocation.latitude]=float
+ColumnTypeTranslation[ezgmaplocation.longitude]=float
+
+*/ ?>
